results/SpecGenBench/2-shot/log-MatrixAdd-2023_11_28_11_21_43.txt
public class MatrixAdd {
    
    //@ requires a.length == 2 && b.length == 2 && a[0].length == 2 && b[0].length == 2;
    //@ ensures \result.length == 2 && \result[0].length == 2;
    //@ ensures \forall int i; 0 <= i && i < 2; \forall int j; 0 <= j && j < 2; \result[i][j] == a[i][j] + b[i][j];
    public int[][] add(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        for (int i = 0; i < 2; i++) {
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][j] + b[i][j];
            }
        }
        return c;
    }

}
/home/max/Documents/JMLGPT/tmp/MatrixAdd.java:10: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                c[i][j] = a[i][j] + b[i][j];
                  ^
  Reason: Double rewriting of ident: i i_397_397___37 i_397_411___40
1 error

